--- a/index.html
+++ b/index.html
@@ -59,3 +59,4 @@ title: "Home"
 <footer>\n
     <p>🚀 Powered by Jekyll & GitHub Pages</p>\n
 </footer>\n
+<link rel="stylesheet" href="assets/css/style.css">
