--- a/index.html
+++ b/index.html
@@ -3,42 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Data Science Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Your Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Your Name</h1>
-        <p>Data Scientist | AI Enthusiast | Problem Solver</p>
+        <p>Data Scientist | Machine Learning Enthusiast</p>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hi! I'm a data scientist passionate about solving problems using machine learning and AI.</p>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>📊 Bitcoin Price Prediction</h3>
-            <p>Built an LSTM model to predict Bitcoin prices using historical data.</p>
-            <a href="https://github.com/your-username/bitcoin-prediction" target="_blank">View Project</a>
-        </div>
-        <div class="project">
-            <h3>📈 Stock Market Analysis</h3>
-            <p>Analyzed stock market trends using Python and Pandas.</p>
-            <a href="https://github.com/your-username/stock-analysis" target="_blank">View Project</a>
-        </div>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: your-email@example.com</p>
-        <p>GitHub: <a href="https://github.com/your-username">your-username</a></p>
+    <section id="hero">
+        <h2>Welcome to My Portfolio</h2>
+        <p>Showcasing my work in Data Science and AI</p>
+        <a href="projects.html" class="btn">View Projects</a>
     </section>
 
     <footer>
-        <p>© 2025 Your Name | Built with ❤️ and GitHub Pages</p>
+        <p>© 2025 Your Name | Built with ❤️</p>
     </footer>
 </body>
 </html>
