--- a/index.html
+++ b/index.html
@@ -1,28 +1,268 @@
-<!DOCTYPE html>
-<html lang="en">
+
+        <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Electpoll</title>
+    <link rel="stylesheet" href="Assets/Css/index.css"/>
+    <link rel="stylesheet" href="Assets/Css/header.css"/>
+    <link rel="stylesheet" href="Assets/Css/footer.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 <body>
+    <section id="mobile-menu">
+        <ul>
+            <li><a href="Pages/about_us.html">About Us</a></li>
+            <li><a href="Pages/pricing.html">Pricing</a></li>
+            <li><a href="Pages/support.html">Support</a></li>
+            <li><a href="Pages/features.html">Features</a></li>
+            <li><a href="Pages/pricing.html">Plans and Pricing</a></li>
+            <li><a href="Pages/faq.html">FAQ</a></li>
+        </ul>
+        <div>
+            <div><a href="Pages/sign_up.html" ><button id="mobile-sign-up-btn" >Create Account</button></a></div>
+            <div><a href="Pages/sign_in.html" ><button id="mobile-log-in-btn">Sign In</button></a></div>
+        </div>
+    </section>
     <header>
-        <h1>Your Name</h1>
-        <p>Data Scientist | Machine Learning Enthusiast</p>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div><a href="index.html"><img class="logo" src="Assets/Img/logo.svg" /></a></div>
+        <div class="nav-links">
+            <div>
+                <p class="link-text"><a href="Pages/about_us.html">About Us</a></p>
+                <div><img src="Assets/Img/caret-down.svg" /></div>
+            </div>
+            <div>
+                <p class="link-text plt"><a href="Pages/pricing.html">Pricing</a></p>
+            </div>
+            <div>
+                <p class="link-text"><a href="Pages/support.html">Support</a></p>
+                <div><img src="Assets/Img/caret-down.svg" /></div>
+            </div>
+        </div>
+        <div>
+            <a href="Pages/sign_up.html"><button class="create-acc-btn">Create Account</button></a>
+            <a href="Pages/sign_in.html"><button class="sign-in-btn">Sign In</button></a>
+        </div>
+        <div id="hamburger-menu">
+            <div class="hamburger-line"></div>
+            <div class="hamburger-line"></div>
+            <div class="hamburger-line"></div>
+        </div>
     </header>
-
-    <section id="hero">
-        <h2>Welcome to My Portfolio</h2>
-        <p>Showcasing my work in Data Science and AI</p>
+    <section id="main-section">
+        <div id="main-sec-left">
+            <h1>Make your voice heard!<br/> Create your own elections and polls with<br/> our easy-to-use e-voting platform.</h1>
+            <p>Electpoll is designed to make the voting process simple, secure, and transparent. With just a few clicks,
+                you can create your own customized election or poll, set voting rules and deadlines,
+                and invite voters to participate. Electpoll ensures that every vote is counted
+                accurately and provides real-time results</p>
+            <div>
+                <a href="/Pages/sign_up.html" ><button id="main-sec-btn-1">Create your first election</button></a>
+                <a href="/Pages/features.html" ><button id="main-sec-btn-2">Learn about our features</button></a>
+            </div>
+        </div>
+        <div id="main-sec-right">
+            <img src="Assets/Img/top_img.png" />
+        </div>
+    </section>
+    <section class="testimonial-section">
+        <div><button class="slide-btn"><img src="Assets/Img/button-left.svg" /></button></div>
+        <div>
+             <p class="testimonial-text">“As a non-profit organization, we needed a cost-effective solution
+            for conducting our board<br> elections. This e-voting platform provided 
+            us with the perfect solution. It was easy to set up, and<br> our members 
+            were able to vote from anywhere, which increased participation significantly. 
+            We<br> are very pleased with the platform and would recommend it to others.”
+            </p>
+            <div class="testimonial-profile">
+                <div><img src="Assets/Img/ratings.svg" /></div>
+                <p>The XYZ NGO, Abuja</p>
+            </div>
+        </div>
+        <div><button class="slide-btn"><img src="Assets/Img/button-right.svg" /></button></div>
+    </section>
+    <section id="features-section">
+        <h2>Empowering your vote with innovative features</h2>
+        <div>
+            <div>
+                <div><img src="Assets/Img/monotone_free-button.svg" /></div>
+                <h3>Free for Less than 50 Voters</h3>
+                <p>Electpoll is free for organizations with 
+                    less than 50 eligible voters, making it 
+                    easier for smaller organizations to participate 
+                    in the electoral process without financial constraints.</p>
+            </div>
+            <div>
+                <div><img src="Assets/Img/stats.svg" /></div>
+                <h3>Audit Trails</h3>
+                <p>Electpoll creates an audit trail of e-voting system activity. 
+                    This feature keeps a record of all voting actions and assures 
+                    that the results are accurate and unmanipulated.</p>
+            </div>
+            <div>
+                <div><img src="Assets/Img/dashboard.svg" /></div>
+                <h3>Customised candidates photos and bios</h3>
+                <p>Candidates' photos and biography are displayed on 
+                    Electpoll to help voters choose. This feature 
+                    enhances voter trust by displaying candidates' 
+                    backgrounds, experience, and qualifications.</p>
+            </div>
+            <div>
+                <div><img src="Assets/Img/email-alert.svg" /></div>
+                <h3>Email Notice</h3>
+                <p>Electpoll emails registered voters about upcoming elections, 
+                    precincts, and hours. This feature can notify voters of voter 
+                    information or election process updates.</p>
+            </div>
+        </div>
+        <a href="/Pages/features.html" ><button id="features-btn">See all features</button></a>
+    </section>
+    <section id="poll-section">
+        <div id="poll-sec-left">
+            <h1>Create Polls, Get Results, Make Decisions.</h1>
+            <p>
+                Our polls feature lets you design simple polls for many purposes. 
+                Our polls tool makes it easy to create and share polls for decision-making, 
+                feedback, or opinion-gathering. Multiple-choice, rating, and open-ended polls are customizable. 
+                You may email, post, or embed your poll after creating it. 
+                Real-time tracking and simple charts and graphs are also available.
+            </p>
+            <div>
+                <a href="/Pages/sign_up.html" ><button id="poll-sec-btn-1">Create a poll for free</button></a>
+                <a href="/Pages/features.html"><button id="poll-sec-btn-2">Learn more about polls</button></a>
+            </div>
+        </div>
+        <div class="img-rmv">
+            <img src="Assets/Img/poll-img.png" />
+        </div>
+    </section>
+    <section id="faq-section">
+        <div class="img-rmv"><img src="Assets/Img/faq-img.png" /></div>
+        <div id="faq-section-box">
+            <h3>How do you create an election?</h3>
+            <p class="faq-text">Creating an election on electpoll is easy and straightforward.
+                Follow these simple steps to create your election:</p>
+            <div>
+                <div class="faq-list">
+                    <p>1</p>
+                    <p>Log in or create an account and click on the "Create Election" button in your dashboard.</p>
+                </div>
+                <div class="faq-list">
+                    <p>2</p>
+                    <p>Fill in the necessary details, including the title of the election, the description, and the start and end dates.</p>
+                </div>
+                <div class="faq-list">
+                    <p>3</p>
+                    <p>Set up the eligibility criteria for voters. You can upload a voter list and set up eligibility requirements (e.g., age, residency, membership).</p>
+                </div>
+                <div class="faq-list">
+                    <p>4</p>
+                    <p>Adjust the result display (real-time or post-election display) and email sending settings</p>
+                </div>
+                <div class="faq-list">
+                    <p>5</p>
+                    <p>Preview and test the election before launching it to ensure everything is working correctly.</p>
+                </div>
+                <div class="faq-list">
+                    <p>6</p>
+                    <p>Launch the election and invite voters to participate by sharing the link through email, social media, or your website.</p>
+                </div>
+            </div>
+            <p class="faq-text">With electpoll, you can create and run your election with ease, 
+                giving your audience a seamless and accessible voting experience.</p>
+            <div>
+                <a href="/Pages/sign_up.html"><button id="faq-btn-1">Create your election now</button></a>
+                <a href="/Pages/faq.html"><button id="faq-btn-2">Check other FAQs</button></a>
+            </div>
+        </div>
+    </section>
+    <section id="here-for-you-section">
+        <div id="hfy-sec-top">
+            <h1>Here for you!</h1>
+            <p id="here-for-you-text">Electpoll is designed to serve a wide range of customers,
+                including<br> organizations, educational institutions, 
+                political parties, and government<br> agencies. 
+                We understand that conducting elections and polls can be a<br> 
+                challenging task, and our platform is designed to make the 
+                process easier<br> and more efficient for all.</p>
+            <div>
+                <a href="/Pages/sign_up.html" ><button id="here-for-you-btn-1">Sign up to Join in</button></a>
+                <a href="/Pages/about_us.html" ><button id="here-for-you-btn-2">Learn More</button></a>
+            </div>
+        </div>
+        <div>
+            <div class="here-for-you-sec-box">
+                <div><img src="Assets/Img/account-group.svg" /></div>
+                <p>Professional associations / Corporations</p>
+            </div>
+            <div class="here-for-you-sec-box box-2">
+                <div><img src="Assets/Img/map_political.svg" /></div>
+                <p>Political Organizations / Trade Unions</p>
+            </div>
+            <div class="here-for-you-sec-box">
+                <div><img src="Assets/Img/trusted-organization.svg" /></div>
+                <p>Educational Institituons / Non-profit</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-top">
+            <div>
+                <div class="footer-logo"><img src="Assets/Img/logo (light).svg" /></div>
+                <p>Electpoll provides secure and reliable polling and<br/> elections for organizations and institutions.
+                    Our<br/> platform allows qualified voters to vote without<br/> barriers.
+                    We simplify voting via voter education,<br/> identification, and consulting.</p>
+            </div>
+            <div class="contact-box">
+                <h2 class="footer-header">Contact</h2>
+                <div>
+                    <div><img src="Assets/Img/location.svg" /></div>
+                    <p>University of Ibadan, Ibadan, Nigeria.</p>
+                </div>
+                <div>
+                    <div><img src="Assets/Img/phone.svg" /></div>
+                    <p>08087869811, 07088982988</p>
+                </div>
+                <div>
+                    <div><img src="Assets/Img/email.svg" /></div>
+                    <p>support@electpoll.com</p>
+                </div>
+            </div>
+            <div>
+                <h2 class="footer-header">Links</h2>
+                <div class="footer-nav">
+                    <ul class="footer-nav-left">
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="Pages/about_us.html">About Us</a></li>
+                        <li><a href="Pages/features.html">Features</a></li>
+                        <li><a href="Pages/sign_in.html">Log in</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="Pages/pricing.html">Plans and Pricing</a></li>
+                        <li><a href="Pages/support.html">Support</a></li>
+                        <li><a href="Pages/faq.html">FAQ</a></li>
+                        <li><a href="Pages/sign_up.html">Create Account</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© Copyright Electpoll e-voting system</p>
+            <div class="change-language">
+                <div><img src="Assets/Img/globe.svg" /></div>
+                <p>Change Language</p>
+            </div>
+            <div class="socials">
+                <div><img src="Assets/Img/facebook.svg" /></div>
+                <div><img src="Assets/Img/twitter.svg" /></div>
+                <div><img src="Assets/Img/instagram.svg" /></div>
+            </div>
+        </div>
+    </footer>
+    <script src="Assets/Js/index.js"></script>
+</body>
+</html>
         <a href="projects.html" class="btn">View Projects</a>
     </section>
 
